samples/BankAccounts/src/Domain/BankAccounts/Errors/AtLeast18YearsOldException.cs
namespace BankAccounts.Domain.BankAccounts.Errors
{
    internal class AtLeast18YearsOldException : Exception
    {
        public AtLeast18YearsOldException() : base(BankAccountErrors.AtLeast18YearsOld) { }
    }
}
